# 7

./: CMakeLists.txt  main.cpp
include/: Gun.h  Soilder.h
src/: Gun.cpp  Soilder.cpp
